
	* libfreeipmi/src/ipmi-ssif-interface.c (ipmi_ssif_cmd2): Fix ssif
	read bug.

	* libfreeipmi/src/ipmi-netfn-spec.c: Removed file.

	* libfreeipmi/src/ipmi-netfn-spec.h: Removed pre 0.1.0 remnant code.

	* doc/examples/Makefile.am: Fix distcheck.

	* common/src/Makefile.am: Make libargpcommon.la library.
	
	* bmc-info/src/Makefile.am, ipmi-raw/src/Makefile.am: Use new util library.

2006-02-05  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-msg-interface-desc.h: Remove duplicate code.

	Comp Code cleanup.

	* libfreeipmi/src/ipmi-comp-code-spec.h: New file.
	
2006-02-04  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/acpi-spmi-locate.c (ipmi_acpi_get_spmi_table):
	Fix parameter overwriting bug.
	
2006-02-03  Albert Chu  <chu11@llnl.gov>

	* fish/src/ipmi-wrapper.c (ipmi_ping): Remove incorrect warning message.

	* libfreeipmi/src/ipmi-msg-support-cmds.c
	(ipmi_cmd_get_channel_info2, ipmi_cmd_get_channel_access2,
	ipmi_cmd_get_user_access2, ipmi_cmd_set_user_access2,
	ipmi_cmd_set_user_password2, ipmi_cmd_get_user_name2,
	ipmi_cmd_set_user_name2, ipmi_cmd_set_channel_access2): Fix
	parameter checks.

	* libfreeipmi/src/ipmi-kcs-interface.c (ipmi_kcs_cmd2): Fix kcs
	read bug.
	
2006-02-02  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-sensor-utils.c
	(ipmi_sensor_get_decode_params_old,
	ipmi_sensor_get_decode_params), libfreeipmi/src/ipmi-sol-cmds.c
	(ipmi_cmd_sol_conf_get_sol_enable2,
	ipmi_cmd_sol_conf_sol_enable_disable2, fill_get_sol_conf_param,
	fill_sol_conf_sol_enable_disable), libfreeipmi/src/ipmi-pef-cmds.c
	(fill_kcs_alert_immediate, fill_kcs_get_pef_conf_param,
	fill_kcs_set_pef_control, fill_kcs_set_global_action_control,
	fill_kcs_set_startup_delay, fill_kcs_set_alert_startup_delay,
	fill_kcs_set_filter_table_entry, fill_kcs_set_num_event_filters,
	fill_kcs_set_filter_table_data1, fill_kcs_set_num_alert_policies,
	fill_kcs_get_pef_caps, fill_kcs_arm_pef_postpone_timer,
	fill_kcs_set_last_processed_event,