@@ -13,6 +13,8 @@
 	
 	* bmc-info/src/Makefile.am, ipmi-raw/src/Makefile.am: Use new util library.
 
+	* common/src/arg-common.c: Use config.h for #includes.
+
 2006-02-05  Albert Chu  <chu11@llnl.gov>
 
 	* libfreeipmi/src/ipmi-msg-interface-desc.h: Remove duplicate code.
